--- a/Client/test.htm
+++ b/Client/test.htm
@@ -20,26 +20,19 @@
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/logic.js"></script>
 
 <script>
-var source = document.createElement('source');
+get_meta()
+.then(function(json_resp){
+    var json = JSON.parse(json_resp);
+    video_list = json.videos;
 
-var oReq = new XMLHttpRequest();
-oReq.open("GET", "http://localhost:9090/server/video?id=v1.mp4", true);
-oReq.responseType = "blob";
-oReq.onload = function(oEvent) {
-  var blob = oReq.response;
-  var obj = window.URL.createObjectURL(blob)
-  source.setAttribute('src', obj);
-  source.setAttribute('type','video/mp4');
-
-  var video = document.getElementById("player");
-  video.appendChild(source);
-  video.controls = false
-  video.play();
-};
-oReq.send();
-
+    start_loop(video_list);
+})
+.catch(function(response){
+    alert(response)
+});
 
 </script>
 </body>
