In-progress with MediaSource API.
ToDo - Progressive flow and understanding everything

--- a/Client/index.htm
+++ b/Client/index.htm
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <h3>VIDEO tag and local video chunks</h3>
+
 <div class="container">
 
     <video autoplay muted id="player" width="320" height="240" controls>
