--- a/Client/mseTest.htm
+++ b/Client/mseTest.htm
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+        <h3>VIDEO tag and MediaSource API</h3>
+
 <div class="container">
 
     <video autoplay muted id="player" controls>
@@ -25,13 +27,13 @@
 var videoPlayer = document.getElementById('player');
 var medSource = new MediaSource;
 
-get_video_chunk("http://localhost:9090/server/video?id=video1.mp4")
+get_video_chunk("http://localhost:9090/server/video?id=b2.webm")
     .then(function(buf){
         var arrayBuffer = event.target.result;
         videoPlayer.src = URL.createObjectURL(medSource);
         medSource.addEventListener('sourceopen', 
             function(){
-                var sourceBuffer = medSource.addSourceBuffer('video/mp4; codecs="avc1.42E01E, mp4a.40.2"');
+                var sourceBuffer = medSource.addSourceBuffer('video/webm; codecs="vorbis, vp8"');
                 sourceBuffer.addEventListener('updateend', function () {
                     medSource.endOfStream();
                     videoPlayer.play();
