--- a/Client/mseTest.htm
+++ b/Client/mseTest.htm
@@ -29,6 +29,7 @@
 
         var mime = 'video/webm; codecs="vorbis, vp8"';
         var base = "http://localhost:9090/server/video";
+
         var id = "bunny"
         var segments = 7
 
@@ -45,7 +46,7 @@
                     index++;
                     if (index >= segments) {
                         sourceBuffer.onupdateend = null;
-                        mediaSource.endOfStream();
+                        //mediaSource.endOfStream();
                         return;
                     }
                     var chunk = await get_video_chunk(url_create(base, id , index));
